# Face_recognition

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
base/: build.gradle
base/schemas/com.luo.base.db.AppDatabase/: 1.json
base/schemas/com.luo.base.db.database.FaceDatabase/: 1.json
base/src/main/: AndroidManifest.xml
blue/: build.gradle
blue/src/main/: AndroidManifest.xml
down/: build.gradle
down/src/main/: AndroidManifest.xml
face/: build.gradle
face/src/main/: AndroidManifest.xml
face/src/main/cpp/: CMakeLists.txt  DetectFace.cpp  DetectFaceDB.cpp  InterfaceArcFace.cpp  InterfaceArcFaceDB.cpp  InterfaceRetinaFace.cpp
face/src/main/cpp/arcface/: ArcFace.cpp  ArcFace.hpp
face/src/main/cpp/opencv-mobile-4.5 2.1-android/sdk/native/jni/abi-x86_64/: .OpenCVConfig.cmake.icloud
face/src/main/cpp/opencv-mobile-4.5 2.1-android/sdk/native/staticlibs/arm64-v8a/: .libopencv_features2d.a.icloud  .libopencv_photo.a.icloud  .libopencv_video.a.icloud
face/src/main/cpp/opencv-mobile-4.5 2.1-android/sdk/native/staticlibs/armeabi-v7a/: .libopencv_features2d.a.icloud  .libopencv_imgproc.a.icloud  .libopencv_photo.a.icloud  .libopencv_video.a.icloud
face/src/main/cpp/opencv-mobile-4.5 2.1-android/sdk/native/staticlibs/x86/: .libopencv_core.a.icloud  .libopencv_features2d.a.icloud  .libopencv_imgproc.a.icloud  .libopencv_photo.a.icloud  .libopencv_video.a.icloud
face/src/main/cpp/opencv-mobile-4.5 2.1-android/sdk/native/staticlibs/x86_64/: .libopencv_features2d.a.icloud  .libopencv_imgproc.a.icloud  .libopencv_photo.a.icloud  .libopencv_video.a.icloud
face/src/main/cpp/retinaface/: RetinaFace.hpp
face2/: build.gradle
face2/src/main/: AndroidManifest.xml
face2/src/main/cpp/: CMakeLists.txt  InterfaceRetinaFace.cpp
face2/src/main/cpp/arcface/: ArcFace.cpp  ArcFace.hpp
face2/src/main/cpp/retinaface/: RetinaFace.cpp
gradle/wrapper/: gradle-wrapper.properties
login/: build.gradle
recognize/: build.gradle
(+118 files in other folders)
